[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.0"
log = "0.4.17"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-router = "0.16.0"
web-sys = "0.3.57"
chrono = "0.4.19"
waapi = { path = "../waapi" }
# material-yew  = { git = "https://github.com/hamza1311/material-yew.git", features = ["full"] }
