[package]
name = "wechat-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
rbson = { version = "2.0.3" }
fast_log = { version = "1.5.1" }
rbatis =  { version = "3.1.7" } 
axum = "0.5.4"
reqwest = { version = "0.11.10" }
log = "0.4.16"
anyhow = { version = "1.0.57" }
tokio = { version = "1.18.0", features = ["full"] }
lazy_static = { version = "1.4.0" }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = { version = "0.3.0", features = ["spa"] }
clap = { version = "3.1.15", features = ["derive"] }
tower = "0.4.12"
tower-http = { version = "0.3.2", features = ["full"] }
md5 = "0.7.0"
toml = "0.5.9"
serde_repr = "0.1.8"

# [profile.release]
# opt-level = 3
# strip = "debuginfo"
# lto = true
